kubernetes-config/mongo-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    appdb: guest-db-app
  name: guest-db-app
spec:
  replicas: 1
  selector:
    matchLabels:
      appdb: guest-db-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
#        io.kompose.network/kubernetes-config-default: "true"
        appdb: guest-db-app
    spec:
      containers:
        - image: mongo
          name: mongo-db-guest
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: guest-db
      restartPolicy: Always
      volumes:
        - name: guest-db
          persistentVolumeClaim:
            claimName: guest-pv-claim
status: {}
