kubernetes-config/guest-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: guest-app
  name: guest-app
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    app: guest-app
status:
  loadBalancer: {}
